--- a/whse_receipts-master/pom.xml
+++ b/whse_receipts-master/pom.xml
@@ -50,5 +50,30 @@
 		    <artifactId>spring-data-jpa</artifactId>
 		    <version>2.0.7.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>com.ust.userauthentication</groupId>
+  			<artifactId>whse_authentication-master</artifactId>
+  			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>om.ust.itembatch</groupId>
+  			<artifactId>whse_main_batch-master</artifactId>
+  			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
+	<build>
+		<pluginManagement>
+	        <plugins>
+	                <plugin>
+	                    <groupId>org.apache.maven.plugins</groupId>
+	                    <artifactId>maven-compiler-plugin</artifactId>
+	                    <version>2.5.1</version>
+	                    <configuration>
+	                        <source>1.8</source>
+	                        <target>1.8</target>
+	                    </configuration>
+	                </plugin>
+	        </plugins>
+        </pluginManagement>
+	</build>
 </project>
